Fixes about section overlap issue

--- a/src/routes/About/style.scss
+++ b/src/routes/About/style.scss
@@ -94,6 +94,7 @@
   width: 100% !important;
   border-radius: 0;
   right: 0;
+
   video {
     width: 100%;
   }
@@ -105,7 +106,7 @@
 
 .about--image {
   display: flex;
-  height: 50vh;
+  height: 50%;
   position: absolute;
   top: 12.5%;
 }
@@ -521,5 +522,12 @@
     background-color: #ffffff;
     border-radius: 50%;
     padding: 1rem;
+  }
+}
+
+.about__animation-wrapper {
+  @media only screen and (max-height: 965px) {
+    height: auto;
+    min-height: 100rem;
   }
 }
